Fix: - By default, KafkaAdapter enforces max.poll.event to 1 to receive a single event. - In case of an exception during processing, we seek to last postilion